add ingredients and steps

--- a/recipes/sandwich.html
+++ b/recipes/sandwich.html
@@ -8,6 +8,30 @@
 </head>
 <body>
     <h1>Italian Night Club</h1>
-    <img src="./images/sandwich.jpeg">
+    <img src="./images/sandwich.jpeg" style="width: 500px">
+    <p>A tasty Italian sandwich, made with hand-sliced salami, 
+        capocollo and smoked ham, topped with mayo, fresh-sliced lettuce, 
+        onions, oil & vinegar and oregano-basil. The #9 is served on your 
+        choice of fresh-baked 8" or Giant 16" French bread, Thick-Sliced 
+        Wheat bread or our lettuce-wrapped Unwich®. Plus, add any of our 
+        Freebies or Add-Ons to customize your sandwich just how you like!
+    </p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>French bread</li>
+        <li>Salami</li>
+        <li>Cooked ham</li>
+        <li>Lettuce</li>
+        <li>Capocollo</li>
+        <li>Mayo</li>
+        <li>Oil & Vinegar</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Place down bun</li>
+        <li>Add meat, condiments, & toppings</li>
+        <li>Put the top bun on</li>
+        <li>Eat!</li>
+    </ol>
 </body>
 </html>
