add two more images, center cards

--- a/recipes/index.html
+++ b/recipes/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1 class="text-center text-6xl p-8 font-bold">Odin Recipes</h1>
-    <div>
+    <div class="flex justify-center">
         <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow hover:shadow-lg dark:bg-gray-800">
             <a href="./sandwich.html">
                 <img class="rounded-t-lg" src="./images/sandwich.jpeg" alt="Italian Night Club" />
