--- a/recipes/index.html
+++ b/recipes/index.html
@@ -9,17 +9,57 @@
 </head>
 <body>
     <h1 class="text-center text-6xl p-8 font-bold">Odin Recipes</h1>
-    <div class="flex justify-center">
+    <div class="flex justify-center h-full space-x-12">
+
+        <!-- Italian Night Club Card -->
         <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow hover:shadow-lg dark:bg-gray-800">
             <a href="./sandwich.html">
-                <img class="rounded-t-lg" src="./images/sandwich.jpeg" alt="Italian Night Club" />
+                <img class="rounded-t-lg max-h-60 w-full" src="./images/sandwich.jpeg" alt="Italian Night Club" />
             </a>
             <div class="p-5">
                 <a href="./sandwich.html">
                     <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">Italian Night Club</h5>
                 </a>
                 <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">A tasty Italian sandwich, made with hand-sliced salami, capocollo and smoked ham, topped with Hellmann's® mayo, fresh-sliced lettuce, onions, oil & vinegar and oregano-basil.</p>
-                <a href="./sandwich.html" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+                <a href="./sandwich.html" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-red-600 rounded-lg hover:bg-red-700 focus:ring-4 focus:outline-none focus:ring-red-300">
+                    See Recipe
+                    <svg class="w-3.5 h-3.5 ml-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+                    </svg>
+                </a>
+            </div>
+        </div>
+
+        <!-- Brownie Card -->
+        <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow hover:shadow-lg dark:bg-gray-800">
+            <a href="./sandwich.html">
+                <img class="rounded-t-lg max-h-60 w-full" src="./images/brownie.jpg" alt="Italian Night Club" />
+            </a>
+            <div class="p-5">
+                <a href="./sandwich.html">
+                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">Brownie</h5>
+                </a>
+                <p class="mb-3 font-normal text-gray-700 dark:text-gray-400"> a classic brownie make with semi-sweet chocolate, cocoa and melted chocolate.</p>
+                <a href="./sandwich.html" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-red-600 rounded-lg hover:bg-red-700 focus:ring-4 focus:outline-none focus:ring-red-300">
+                    See Recipe
+                    <svg class="w-3.5 h-3.5 ml-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+                    </svg>
+                </a>
+            </div>
+        </div>
+
+        <!-- Thai Chicken Wrap Card -->
+        <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow hover:shadow-lg dark:bg-gray-800">
+            <a href="./sandwich.html">
+                <img class="rounded-t-lg max-h-60 w-full" src="./images/wrap.png" alt="Italian Night Club" />
+            </a>
+            <div class="p-5">
+                <a href="./sandwich.html">
+                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">Thai Chicken Wrap</h5>
+                </a>
+                <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">All-natural chicken, Thai satay sauce, crispy carrot noodles, cucumber, onion, lettuce and mayo, in a flour wrap.</p>
+                <a href="./sandwich.html" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-red-600 rounded-lg hover:bg-red-700 focus:ring-4 focus:outline-none focus:ring-red-300">
                     See Recipe
                     <svg class="w-3.5 h-3.5 ml-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
