add short description to title

--- a/recipes/index.html
+++ b/recipes/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-full">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,8 +8,11 @@
     <link rel="stylesheet" href="output.css">
 </head>
 <body>
-    <h1 class="text-center text-6xl p-8 font-bold">Odin Recipes</h1>
-    <div class="flex justify-center h-full space-x-12">
+    <div  class="text-center p-12">
+        <h1 class="text-8xl font-bold">Odin Recipes</h1>
+        <h2 class="text-3xl mt-4">Some really yummy Jimmy John's™ foods.</h2>
+    </div>
+    <div class="flex justify-center align-center h-full space-x-12 p-24">
 
         <!-- Italian Night Club Card -->
         <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow hover:shadow-lg dark:bg-gray-800">
